--- a/node/package.json
+++ b/node/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "promise-mysql": "^5.1.0"
   }
 }
